--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neighborhoods(len)"
+    "la_boca = neighborhoods(len(neighborhoods)-1)\n",
+    "la"
    ]
   },
   {
