--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighborho"
+    "la_boca_marker = neighborhood_markers[len(neighborhood)]"
    ]
   },
   {
