--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -432,11 +432,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighborhood_markers[len(neighborhood)]"
+    "la_boca_marker = neighborhood_markers[len(neighborhood_markers)-1]"
    ]
   },
   {
