--- a/index.ipynb
+++ b/index.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -441,14 +441,14 @@
        "<folium.map.Marker at 0x7fac3d1b7320>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "la_boca_marker = neighborhood_markers[len(neighborhood_markers)-1]\n",
-    "marker"
+    "ismarker_six"
    ]
   },
   {
