--- a/index.ipynb
+++ b/index.ipynb
@@ -448,7 +448,7 @@
    ],
    "source": [
     "la_boca_marker = neighborhood_markers[len(neighborhood_markers)-1]\n",
-    "ismarker_six"
+    "is(marker_six = la_boca_"
    ]
   },
   {
