--- a/index.ipynb
+++ b/index.ipynb
@@ -432,21 +432,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-19-5c051496313d>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-20-2f4b473025ac>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-5c051496313d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    is(marker_six = la_boca_marker)\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-2f4b473025ac>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    is(marker_six == la_boca_marker)\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "la_boca_marker = neighborhood_markers[len(neighborhood_markers)-1]\n",
-    "is(marker_six = la_boca_marker)"
+    "is(marker_six == la_boca_marker)"
    ]
   },
   {
