automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
    ],
    "source": [
     "la_boca_marker = neighborhood_markers[len(neighborhood_markers)-1]\n",
-    "is(marker_six == la_boca_marker)"
+    "print(marker_six == la_boca_marker)"
    ]
   },
   {
